--- a/newsspec_9474/source/scss/responsive.scss
+++ b/newsspec_9474/source/scss/responsive.scss
@@ -61,7 +61,7 @@
 
 		.stat{
 			padding-top: 17px;
-			font-size: 2.4em;
+			font-size: 2em;
 
 			strong{
 				display: inline;
