--- a/newsspec_9474/source/scss/rtl.scss
+++ b/newsspec_9474/source/scss/rtl.scss
@@ -11,6 +11,7 @@
 		}
 
 		.mapTooltipHolder{
+			line-height: 2em;
 			h2{
 				padding: 0 0 5px 48px;
 			}
@@ -30,7 +31,7 @@
 	.mini-maps .miniMapTooltipHolder{
 		width: 280px;
 		line-height: 2em;
-		
+
 		h2{
 			padding: 0 0 5px 48px;
 		}
